# VB1Reimpl

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  README.md  test.txt
.github/workflows/: build.yml
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VB1DSP.h  VB1ExcitationTables.h  VB1LookAndFeel.h
docs/: VB1_DSP_Reference.cpp  VB1_FINDINGS.md  VB1_FLOAT_PRECISION_PLAN.md  VB1_RCA_PLAN.md  VB1_RE_Spec.md  VB1_formula.tex
tools/: ab_diff.py  cma_fit.py  gen_web.py  generate_test_midi.py  package.sh  render_reimpl.cpp  vb1_frontend.py  vst2_render  vst2_render.c
web/: app.js  excitation-tables.js  index.html  styles.css  vb1-worklet.js
